<resources>
    <string name="app_name">Weather_LiApp_Release</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Date_and_time">23.06.2022 22:26</string>
    <string name="Name_City">Lisakovsk</string>
    <string name="Current_Temperature">20°c</string>
    <string name="Condition">Sunny</string>
    <string name="Max_Min_Temperature">37°c / 14°c</string>
    <string name="Hours">Hours</string>
    <string name="Day">Day</string>

    <string name="Search">Search</string>
    <string name="Sync">Sync</string>
    <string name="days">DAYS</string>
    <string name="hours">HOURS</string>
    <string name="jule_21_07_22">Jule 21.07.22</string>
    <string name="sunny">Sunny</string>
    <string name="weather_image">weather_image</string>
    <string name="empty">Empty</string>
    <string name="tvCountry">Kazakhstan</string>
</resources>